# noiseworks

./: .dockerignore  .env-example  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: codeql.yaml  default.yml
accounts/: forms.py  models.py  tests.py  urls.py  views.py
accounts/management/commands/: add_staff_users.py
accounts/migrations/: 0001_initial.py  0002_alter_user_id.py  0003_auto_20210708_1813.py  0004_user_wards.py  0005_alter_user_options.py  0006_auto_20220117_1704.py  0007_user_estate.py  0008_user_contact_warning.py  0009_alter_user_options.py  0010_auto_20221215_1632.py  0011_user_principal_wards.py
accounts/templates/accounts/: edit.html  email_signin.html  email_signin.txt  form_signin.html  form_token.html  list.html  signout.html  staff_settings.html
cases/: admin.py  apps.py  filters.py  forms.py  map_utils.py  models.py  signals.py  test_commands.py  test_edit.py  tests.py  urls.py  views.py  widgets.py
cases/fixtures/: action_types.json  action_types_hackney.json  sample_data.json
cases/forms/: __init__.py  action.py  case.py  filter.py  person.py  recurrence.py  reporting.py  widgets.py
cases/management/commands/: add_random_cases.py  close_cases.py  delete_local_orphaned_files.py  delete_old_notifications.py  export_data.py
cases/migrations/: 0001_initial.py  0002_action_actiontype.py  0003_case_uprn_cache.py  0004_auto_20210715_1117.py  0005_alter_complaint_complainant.py  0006_case_ward.py  0007_alter_case_estate.py  0008_actiontype_visibility.py  0008_auto_20211005_1422.py  0009_actiontype_visibility.py  0010_case_point.py  0011_auto_20211101_1333.py  0012_auto_20211101_1346.py  0013_rename_uprn_cache_case_location_cache.py  0014_auto_20211111_1050.py  0014_case_perpetrators.py  0015_merge_0014_auto_20211111_1050_0014_case_perpetrators.py  0016_historicalcase.py  0017_auto_20211125_1750.py  0018_case_followers.py  0019_auto_20220119_1210.py  0020_alter_case_options.py  0021_auto_20220304_0919.py  0022_auto_20220809_2255.py  0023_auto_20220809_2257.py  0024_auto_20220818_0758.py  0025_alter_action_case_old.py  0026_action_time.py  0027_populate_action_time_from_created_time.py  0028_action_cases_actio_time_278131_idx.py  0028_alter_case_options.py  0028_casesettingssingleton.py  0029_set_initial_case_settings.py  0030_actionfile.py  0030_auto_20221011_1013.py  0031_auto_20221012_1004.py  0032_case_last_update_type.py  0033_populate_case_last_update_type.py  0034_actionfile.py  0034_auto_20221017_1446.py  (+19 more)
cases/templates/cases/: _action_form_cant_upload_prompt.html  _action_form_close_prompt.html  _action_form_files_too_big_prompt.html  _action_form_log_visit_link.html  _case_action_summary.html  _case_last_update.html  _case_list_item.html  _case_list_staff_list.html  (+28 more)
cases/templatetags/: page_filter.py
cases/tests/: conftest.py  test_assign.py  test_auto_assign.py  test_commands.py  test_edit.py  test_filters.py  test_log_files.py  test_log_visit.py  test_merges.py  test_migrations.py  test_notifications.py  test_perpetrators.py  test_public_user.py  test_recurrence.py  test_reporting.py  tests.py
cobrand_hackney/: api.py  apps.py  email.py  package-lock.json  package.json  tests.py
cobrand_hackney/sass/: _base.scss  _layout.scss  _mixins.scss  _noise.scss  new_noise.scss
cobrand_hackney/static/: _buttons.scss  _colours.scss  _forms.scss  _links.scss  _merge.scss  _person.scss  _print.scss  _sections.scss  _tags.scss  _timeline.scss  _typography.scss  _variables.scss  app.scss  base.scss  hackney  js.js  layout.scss
cobrand_hackney/templates/: _ux_tweak_snippet.html  base.html  happens_next.html  home_unapproved.html
conf/: crontab-example  env.sh-example  stack.yml-example
index-testing/: query-to-explain.sql  with-index.qp  without-index.qp
noiseworks/: admin.py  apps.py  asgi.py  base32.py  cobrand.py  current_user.py  debug.py  decorators.py  forms.py  message.py  middleware.py  sass.py  settings.py  tests.py  urls.py  wsgi.py
noiseworks/static/: header.js
noiseworks/templates/: 400.html  403.html  404.html  500.html  _base.html  base.html  email_base.html  home.html
oauth/: tests.py  urls.py  views.py
script/: bootstrap  cibuild  server  setup  test  update
(+36 files in other folders)
