[tool.poetry]
name = "noiseworks"
version = "0.1.0"
description = ""
authors = ["mySociety"]
license = "AGPL"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.2.13"
django-environ = "^0.13.0"
django-libsass = "^0.9"
crispy-forms-gds = "^2.0.1"
django-filter = "^25.1"
Authlib = "^1.6.9"
requests = "^2.32.5"
django-sesame = "^3.2.3"
django-phonenumber-field = {extras = ["phonenumberslite"], version = "^8.3.0"}
notifications-python-client = "^10.0.1"
django-formtools = "^2.5.1"
requests-cache = "^1.3.1"
django-simple-history = "^3.10.1"
boto3 = "^1.42.87"
smart-open = {extras = ["s3"], version = "^7.6.0"}
humanize = "^4.13.0"
django-cleanup = "^9.0.0"
psycopg = {extras = ["c"], version = "^3.3.3"}

[tool.poetry.group.dev.dependencies]
black = "^26.3.1"
pytest-django = "^4.11.1"
django-debug-toolbar = "^6.3.0"
coverage = {extras = ["toml"], version = "^6.5.0"}
requests-mock = "^1.12.1"
ptpython = "^3.0.32"
flake8 = "^7.3.0"
isort = "^8.0.1"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "noiseworks.settings"
python_files = ["tests.py", "test_*.py"]

[tool.coverage.run]
omit = ['*/asgi.py', '*/wsgi.py', 'manage.py', '*/migrations/*']

[tool.black]
exclude = '''/(
  migrations
)/'''

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
